<resources>
    <string name="app_name">UWT Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to NavAppBar -->
    <string name="home_tab">Home</string>
    <string name="contacts_tab">Contacts</string>
    <string name="settings_tab">Settings</string>
    <string name="chat_tab">Chats</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to contact Fragment -->
    <string name="contact_list">Contact List</string>
    <string name="search_contact">Search for Contact</string>
    <string name="default_contact_name">Name goes here</string>
    <string name="no_contacts">You have no contacts. To add a contact use the button on the top right</string>
    <!-- Strings related to individual chat Fragment -->
    <string name="send_message_button">SEND</string>
    <string name="enter_message">Enter message</string>
    <string name="default_weather">Weather Goes Here</string>
    <string name="default_temperature">Temperature Goes Here</string>
    <string name="now_label"> </string>
    <string name="temp_label"> </string>
    <string name="day_label"> </string>

    <!-- Strings related to weather Fragment -->
    <string name="location_string">Location:</string>
    <string name="current_string">Current Conditions:</string>
    <string name="humidity_string">Humidity: </string>
    <string name="save_label">Save</string>
    <string name="delete_label">Delete</string>

    <string name="title_activity_main">UWTChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UWTChat</string>
    <string name="nav_header_subtitle">Group 6</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="user_login_button">Login</string>
    <string name="user_logout_button">Logout</string>
    <string name="user_email">Email</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_register_button">Register</string>
    <string name="user_login_welcome">Welcome!</string>
    <string name="user_instructions">Please log in or register</string>
    <string name="user_username">Username</string>
    <string name="user_password">Password</string>
    <string name="user_success">Login Successful!</string>
    <string name="user_plea">Please register for an account</string>
    <string name="user_login_stay">Stay logged in</string>

    <string name="user_connections">Connections</string>
    <string name="user_home">Home</string>
    <string name="user_chats">Chats</string>
    <string name="user_weather">Weather</string>
    <string name="user_logout">Logout</string>
    <string name="user_contacts">Contacts</string>

    <string name="user_new_chat">New Chat</string>
    <string name="user_delete">Delete</string>
    <string name="user_new_chat_instructions">Select which connections you would like to chat with
     below, then click "Start Chatting".</string>
    <string name="user_new_chat_start_chatting">Start Chatting</string>

    <string name="user_view_connections">View Connections</string>
    <string name="user_search_connections">Search For New Connections</string>
    <string name="user_received_connections">Received Connection Requests</string>
    <string name="user_sent_connections">Sent Connection Requests</string>
    <string name="user_remove_connection">Remove a Connection</string>
    <string name="user_start_chat">Start Chat</string>
    <string name="user_add_contact">Add Contact</string>
    <string name="user_delete_chat_caps">DELETE CHAT</string>
    <string name="user_delete_contact_caps">DELETE CONTACT</string>
    <string name="user_delete_confirmation">Are you sure you want to delete this chat?</string>
    <string name="user_delete_contact_msg">Do you want to delete selected person from contacts?"</string>
    <string name="user_confirm">Confirm</string>
    <string name="user_approve">Approve</string>
    <string name="user_decline">Decline</string>
    <string name="user_delete_connection">Delete Connection</string>
    <string name="user_cancel_request">Cancel Request</string>
    <string name="searchName">Search Name</string>
    <string name="CurrentLocationText">Current Location:</string>
    <string name="current_location_string">Current Location</string>
    <string name="zip_code_text">Zip Code</string>
    <string name="map_search_text">Map</string>
    <string name="saved_locations_string">Saved Locations</string>
    <string name="go_to_weather">Go to Weather</string>
    <string name="recentChatsText">Recent Chats</string>

</resources>
